# hyprdrive

./: .clang-format  .clang-tidy  .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  rustfmt.toml  xmake.lua
.github/workflows/: cmake-multi-platform.yml
.zed/: debug.json  settings.json  tasks.json
src/: main.cpp  main.rs
src/backend/: CMakeLists.txt
src/backend/core/: HyprlandClient.hpp  HyprlandListener.cpp  HyprlandListener.hpp
src/backend/services/: DebugService.hpp  WorkspaceService.hpp
src/core/: HyprlandClient.cpp  HyprlandClient.hpp  HyprlandListener.cpp  HyprlandListener.hpp  HyprlandPaths.hpp  LayerShell.cpp  LayerShell.hpp
src/hyprland/: hyprland_ipc.rs  hyprland_listener.rs  listener.rs  mod.rs
src/hyprland_event/: mod.rs
src/hyprland_listener/: mod.rs
src/services/: DebugService.cpp  DebugService.hpp  WindowService.cpp  WindowService.hpp  WorkspaceService.cpp  WorkspaceService.hpp  debug.rs  debug_service.rs  mod.rs  window_service.rs  workspace_service.rs
src/shared/: mod.rs
src/ui/: CMakeLists.txt  main.qml  ui-main.slint
